--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/fabiopagoti/oauth-playlist#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mongoose": "^5.3.12",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
